log
Wed 27 Mar 2024 02:05:15 PM UTC: 
 list.c | 71 +++++++++++++++++++++++++++++++++++++++++++++++++++++-------------
 1 file changed, 57 insertions(+), 14 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:73:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   73 |   newNode->data = data;
      |          ^~
list.c:72:26: note: referencing an object of size 8 allocated by ‘malloc’
   72 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:74:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   74 |   newNode->next = list->head;
      |          ^~
list.c:72:26: note: referencing an object of size 8 allocated by ‘malloc’
   72 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c: In function ‘pushCurrent’:
list.c:86:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   86 |   newNode->data = data;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:87:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   87 |   newNode->next = list->current->next;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:89:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   89 |   newNode->prev = list->current;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1e33b4b
Wed 27 Mar 2024 02:06:06 PM UTC: 
 list.c | 61 ++++++++++++-------------------------------------------------
 1 file changed, 12 insertions(+), 49 deletions(-)
 tests:  1|5
total_score: 10/70
dc5e58e
Wed 27 Mar 2024 02:06:28 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
7ce20c2
Wed 27 Mar 2024 02:07:01 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
247001f
Wed 27 Mar 2024 02:07:21 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
1946a75
Wed 27 Mar 2024 02:07:41 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
1d4b91b
Wed 27 Mar 2024 02:08:56 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
f4cb346
Wed 27 Mar 2024 02:10:34 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
cdc42fe
Wed 27 Mar 2024 02:11:22 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
09f2055
Wed 27 Mar 2024 02:11:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0206173
Wed 27 Mar 2024 02:15:00 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
2621556
Wed 27 Mar 2024 02:15:20 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   72 |   newNode->data = data;
      |          ^~
list.c:71:26: note: referencing an object of size 8 allocated by ‘malloc’
   71 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:73:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   73 |   newNode->next = list->head;
      |          ^~
list.c:71:26: note: referencing an object of size 8 allocated by ‘malloc’
   71 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5446302
Wed 27 Mar 2024 02:18:33 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
ab18a22
Wed 27 Mar 2024 02:19:30 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
1f0797b
Wed 27 Mar 2024 02:26:26 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
f12c270
Wed 27 Mar 2024 02:32:13 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|2
total_score: 45/70
352a25f
Wed 27 Mar 2024 02:33:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d6def95
Wed 27 Mar 2024 02:33:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d460a5e
Wed 27 Mar 2024 02:35:50 PM UTC: 
 list.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  10|2
total_score: 45/70
b42dab5
Wed 27 Mar 2024 02:37:23 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  11|1
total_score: 55/70
5e7a141
Wed 27 Mar 2024 02:39:05 PM UTC: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
test.c: In function ‘pushCurrent’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:126:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  126 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:117:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  117 | void * popBack(List * list) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
789755c
Wed 27 Mar 2024 02:40:35 PM UTC: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 55/70
3ca7cad
Wed 27 Mar 2024 02:41:15 PM UTC: 
 list.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
9994706
Wed 27 Mar 2024 02:49:09 PM UTC: 
 list.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  0|0
25729cc
Wed 27 Mar 2024 02:50:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c597bc9
